--- a/.github/workflows/.github/workflows/call-reusable.yml
+++ b/.github/workflows/.github/workflows/call-reusable.yml
@@ -1,6 +1,8 @@
 name: Call Reusable Workflow
 
 on:
+  push:
+    branches: [master]
   workflow_dispatch:  # Allow manual triggering
     inputs:           #user enter them in the github actions UI
       deploy_env:
