--- a/.github/workflows/call-reusable.yml
+++ b/.github/workflows/call-reusable.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Call the reusable workflow
-        uses: reusable-workflow/.github/workflows/reusable-workflow.yml@master
+        uses: ahmedhoss22/reusable-workflow/.github/workflows/reusable-workflow.yml@master
         with:
           environment: ${{ github.event.inputs.deploy_env }}
           custom_message: "Triggered manually from ${{ github.repository }}"
