--- a/.github/workflows/call-reusable.yml
+++ b/.github/workflows/call-reusable.yml
@@ -17,8 +17,7 @@ on:
 jobs:
   call-reusable:
     uses: areeb-ado-migration/reusable-workflow/.github/workflows/reusable-workflow.yml@master
-    secrets:
-      PRIVATE_REPO_TOKEN: ${{ secrets.REUSABLE_WORKFLOW_TOKEN }}  # ONLY this secret is needed for auth
+    secrets: inherit 
     with:
       environment: ${{ github.event.inputs.deploy_env }}
       custom_message: "Triggered from ${{ github.repository }} by Hossam :D"
