--- a/.github/workflows/call-reusable.yml
+++ b/.github/workflows/call-reusable.yml
@@ -23,8 +23,8 @@ jobs:
     secrets: 
       token: ${{ secrets.REUSABLE_WORKFLOW_TOKEN }}  # PAT for private repo access
       # api_key: ${{ secrets.DEPLOY_API_KEY }}  # Uncomment if needed
-  Call-workflow2:
-    uses: areeb-ado-migration/reusable-workflow/.github/workflows/reusable-workflow2.yml@master
-  Call-workflow3:
-    uses: Areeb-demo/reusable-workflow/.github/workflows/reusable-workflow2.yml@demo
+  # Call-workflow2:
+  #   uses: areeb-ado-migration/reusable-workflow/.github/workflows/reusable-workflow2.yml@master
+  # Call-workflow3:
+  #   uses: Areeb-demo/reusable-workflow/.github/workflows/reusable-workflow2.yml@demo
   
